--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "bootstrap-icons": "^1.10.5",
+        "bootstrap4-toggle": "^3.6.1"
     }
 }
